# GamakEngineProject

./: .clang-format  .gitignore  .kgitignore  CMakeLists.txt  bebraSchem.drawio  instruction.txt  НВО.cpp  НВО.txt
libraries/TinyXML/lib/: libecpg.lib  libecpg_compat.lib  libpgcommon.lib  libpgport.lib  libpgtypes.lib  libpq.lib  pqxx.lib  tinyxml2.lib
libraries/TinyXML/lib/pkgconfig/: libpqxx.pc  tinyxml2.pc
resources/textures/: mainPage.ase
sources/: sources.cmake
sources/Objects/: aliveObjects.hpp  objects_sources.cmake  player.cpp  player.hpp  sfmlObjects.cpp  sfmlObjects.hpp  world.hpp
sources/core/: core.cpp  core.hpp  core_sources.cmake  events.cpp  events.hpp
sources/domain/: const.hpp  definiki.hpp  domain_sources.cmake  path.cpp  path.hpp  time.cpp  time.hpp
sources/game/: aliveObjects.cpp  aliveObjects.hpp  game.hpp  game_sources.cmake  gameplay.cpp  gameplay.hpp  player.cpp  player.hpp  sfmlObjects.cpp  sfmlObjects.hpp  world.cpp  world.hpp
sources/gui/: button.cpp  button.hpp  gui.cpp  gui.hpp  gui_sources.cmake  interface.cpp  interface.hpp
sources/main/: main.cpp
sources/objects/: impermanentObjects.cpp  impermanentObjects.hpp  level.cpp  level.hpp  objects_sources.cmake  player.cpp  player.hpp  sfmlObjects.cpp  sfmlObjects.hpp  world.cpp  world.hpp
